# zeedle

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  README-zh.md  README.md  build.rs  ui.slint
.github/workflows/: rust.yml
examples/: rodio_usage.rs
lang/: Zeedle.pot
lang/de/LC_MESSAGES/: zeedle.po
lang/es/LC_MESSAGES/: zeedle.po
lang/fr/LC_MESSAGES/: zeedle.po
lang/ru/LC_MESSAGES/: zeedle.po
lang/zh_CN/LC_MESSAGES/: Zeedle.po
src/: config.rs  logger.rs  main.rs  slint_types.rs  utils.rs
ui/: app.slint  button.slint  lyric.slint  song.slint
