[package]
name = "vanilla-player"
version = "0.1.8"
edition = "2024"
authors = ["Jiadong He"]
description = "A local music player built with Rodio and Slint UI"

[dependencies]
chrono = "0.4.42"
env_logger = "0.11.8"
glob = "0.3.3"
home = "0.5.11"
image = "0.25.8"
lofty = "0.22.4"
log = "0.4.28"
rand = "0.9.2"
rodio = "0.21.1"
serde = { version = "1.0.223", features = ["derive"] }
single-instance = "0.3.3"
slint = { version = "1.13.1", default-features = false, features = [
    "backend-winit",
    "renderer-skia",
    "accessibility",
    "compat-1-2",
    "std",
] }
toml = "0.9.5"

[build-dependencies]
slint-build = { version = "1.13.1" }
winresource = "0.1.17"

[dev-dependencies]
sysinfo = "0.37.0"

[package.metadata.packager]
product-name = "vanilla-player"
before-packaging-command = "cargo build --release"
resources = ["DLLs/*.dll"]
authors = ["Jiadong He"]
identifier = "he.jiadong.vanilla-player"
copyright = "Copyright © 2025 Jiadong He. All rights reserved."

[package.metadata.packager.nsis]
installer-icon = "ui/cover.ico"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
